Horizontal scroll bar fix

--- a/styles.css
+++ b/styles.css
@@ -4,10 +4,11 @@ body {
     height: 100%;
     background-color: white;
     overflow-x: hidden;
+    max-width: 100vw;
 }
 html {
     scroll-behavior: smooth;
-    overflow-x: hidden;
+    max-width: 100vw;
 }
 p {
     font-size: 25px;
@@ -603,6 +604,12 @@ p {
     position: sticky;
     top: 0;
     height: 100vh;
+    -webkit-overflow-scrolling: touch;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+.sticky::-webkit-scrollbar {
+    display: none;
 }
 .scroll_section {
     position: absolute;
